--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     
     <div class="hero">
-        <img src="images/bg x2.png" alt="hero_component">
+        <img src="images/bg.png" alt="hero_component">
         <div class="hero_content_box">
            <div class="hero_content">
             <h6>Biznes kurslar</h6>
